--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.11.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.18.1",
     "flash": "^1.1.0",
     "joi": "^17.13.3",
+    "jssha": "^3.3.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.15.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
+    "request": "^2.88.2",
+    "sanitize-html": "^2.17.0",
+    "uuid": "^11.1.0"
   },
   "keywords": [],
   "description": ""
